--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"YOUR_ATERNOS_SERVER_IP",
-	"port": "YOUR_ATERNOS_SERVER_PORT",
-	"name": "BOT_NAME"
+	"ip":"Level_up1.aternos.me:23868",
+	"port": "23868",
+	"name": "Astley"
 }
